--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
     <target name="run" depends="compile" >
         <java classname="Ass6Game" classpath="${classpath}" fork="true">
             <!-- This specifies to pass the arguments from the `ant` command into the `java` execution command -->
-            <arg line="3"/>
+            <arg line="${args}"/>
         </java>
     </target>
 
